Add UPC barcode functionality to inventory system

--- a/public/views/customers.html
+++ b/public/views/customers.html
@@ -24,7 +24,7 @@
             <a href="bills.html" class="nav-link">Bills</a>
             <a href="customers.html" class="nav-link active">Customers</a>
             <a href="vendors.html" class="nav-link">Vendors</a>
-            <a href="inventory.html" class="nav-link">Products</a>
+            <a href="inventory.html" class="nav-link">Inventory</a>
             <a href="employees.html" class="nav-link">Employees</a>
             <a href="payroll.html" class="nav-link">Payroll</a>
             <a href="reports.html" class="nav-link">Reports</a>
