--- a/public/views/purchase-orders.html
+++ b/public/views/purchase-orders.html
@@ -25,7 +25,7 @@
             <a href="purchase-orders.html" class="nav-link active">Purchase Orders</a>
             <a href="customers.html" class="nav-link">Customers</a>
             <a href="vendors.html" class="nav-link">Vendors</a>
-            <a href="inventory.html" class="nav-link">Products</a>
+            <a href="inventory.html" class="nav-link">Inventory</a>
             <a href="employees.html" class="nav-link">Employees</a>
             <a href="payroll.html" class="nav-link">Payroll</a>
             <a href="reports.html" class="nav-link">Reports</a>
