--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -30,7 +30,7 @@
                     Vendors
                 </a>
                 <a href="../public/views/inventory.html" class="button button-orange">
-                    Products
+                    Inventory
                 </a>
                 <a href="../public/views/employees.html" class="button button-info">
                     Employees
