--- a/views/inventory.html
+++ b/views/inventory.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Product Management</h1>
+            <h1>Inventory Management</h1>
             <div id="user-info" style="position: absolute; top: 20px; right: 20px; color: white;"></div>
         </div>
     </header>
@@ -24,7 +24,7 @@
             <a href="bills.html" class="nav-link">Bills</a>
             <a href="customers.html" class="nav-link">Customers</a>
             <a href="vendors.html" class="nav-link">Vendors</a>
-            <a href="inventory.html" class="nav-link active">Products</a>
+            <a href="inventory.html" class="nav-link active">Inventory</a>
             <a href="employees.html" class="nav-link">Employees</a>
             <a href="payroll.html" class="nav-link">Payroll</a>
             <a href="reports.html" class="nav-link">Reports</a>
